--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -42,3 +42,26 @@ html, body
   width 100%
   text-align center
   border 0
+
+  // machine.style
+.machine
+  display grid
+  grid-gap 3rem
+  font-size 2rem
+.machine__number
+  text-align center
+  padding .25rem
+  border-radius 10px
+  border 2px solid #666
+  box-shadow 0 1px 2px #555
+  font-size 2rem
+  width 300px
+
+
+.machine__button
+  font-size 2rem
+  padding 1rem
+  border-radius 10px
+  background-color #eee
+  border 2px solid #666
+  box-shadow 0 2px 5px #555
