--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -1,2 +1,44 @@
-body
-  background #DDD
+
+// leave in this file 
+html, body
+  margin 0
+  padding 0
+.App
+  font-family 'Avenir', Helvetica, Arial, sans-serif
+  display grid
+  grid-template-rows 100px 1fr
+  grid-template-columns 1fr
+  align-items center
+  justify-items center
+  height 100vh
+  text-align center
+  /**
+  -webkit-font-smoothing antialiased
+  -moz-osx-font-smoothing grayscale
+  color #2c3e50
+  grid-template-rows auto 1fr
+  **/
+
+// navigation.style
+
+.nav
+  padding 10px
+  a
+    font-weight bold
+    color #2c3e50
+    &.router-link-exact-active
+      color #42b983
+
+// board.style
+
+.board
+  margin 0
+  padding 0
+.board__active-number
+  color: #232323
+  font-size 33vw
+  margin 0
+  padding 0
+  width 100%
+  text-align center
+  border 0
