--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -21,13 +21,9 @@ html, body
 
 // navigation.style
 
-.nav
+.navigation > *
   padding 10px
-  a
-    font-weight bold
-    color #2c3e50
-    &.router-link-exact-active
-      color #42b983
+
 
 // board.style
 
