Add Agent component

--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -65,3 +65,31 @@ html, body
   background-color #eee
   border 2px solid #666
   box-shadow 0 2px 5px #555
+
+// agent.styl
+
+.agent
+  margin 0
+  padding 0
+  font-size 3rem
+  display grid
+  grid-template-columns: auto 1fr
+  grid-gap 1rem
+  justify-items end
+label
+  justify-self left
+
+.agent__input
+  font-size 3rem
+  width 9rem
+  text-align right
+  border 0
+
+.agent__button
+  font-size 2rem
+  padding 1rem
+  border-radius 10px
+  background-color #eee
+  border 2px solid #666
+  box-shadow 0 2px 5px #555
+  grid-column span 2
