--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -45,13 +45,13 @@ html, body
   grid-gap 3rem
   font-size 2rem
 .machine__number
+  background url("https://res.cloudinary.com/maccorzo/image/upload/v1539974724/qns/number.svg") no-repeat center center
+  height 210px
   text-align center
-  padding .25rem
-  border-radius 10px
-  border 2px solid #666
-  box-shadow 0 1px 2px #555
-  font-size 2rem
-  width 300px
+  font-size 4rem
+  display flex
+  align-items center
+  justify-content center
 
 
 .machine__button
