Use NavLink and add active link style

--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -12,6 +12,12 @@ html, body
   justify-items center
   height 100vh
   text-align center
+
+
+.link--active
+  font-weight 800
+  color red
+
   /**
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
@@ -58,15 +64,15 @@ html, body
   font-size 2rem
   padding 1rem
   border-radius 10px
+  box-shadow 0 2px 5px #555
   background-color #eee
   border 2px solid #666
-  box-shadow 0 2px 5px #555
 
 // agent.styl
 
 .agent
-  margin 0
   padding 0
+  margin 0
   font-size 3rem
   display grid
   grid-template-columns: auto 1fr
