--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -161,6 +161,8 @@ label
     display none
   .navbar__items--right
     margin-left 0
+  .navbar__link
+    padding .25rem 0
   .navbar__link-toggle
     align-self flex-end
     padding .5rem 2rem
@@ -169,20 +171,20 @@ label
     cursor pointer
   .navbar__toggle--show
     display flex
-.navbar__toggle-button
-   background-color white
-   height .25rem
-   width 2rem
-   position absolute
-   top 45%
-   left 15%
-   transition all 1s ease
-.navbar__toggle-button::before
-  content ""
-  background-color white
-  height .25rem
-  width 2rem
-  position absolute
-  bottom 200%
-  width 100%
-  left 0
+  .navbar__toggle-button
+    background-color white
+    height .25rem
+    width 2rem
+    position absolute
+    top 45%
+    left 15%
+    transition all 1s ease
+  .navbar__toggle-button::before
+    content ""
+    background-color white
+    height .25rem
+    width 2rem
+    position absolute
+    bottom 200%
+    width 100%
+    left 0
