--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -1,9 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Exo+2');
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+
+$brandColor = #667266
+$blue = #007BFF
+
+$darkPrimaryColor =   #00796B
+$primaryColor =       #009688
+$lightPrimaryColor =  #B2DFDB
+$textPrimaryColor =   #FFFFFF
+$accentColor =        #FFC107
+$primaryTextColor =   #212121
+$secondaryTextColor = #757575
+$dividerColor =       #BDBDBD
 
 // leave in this file 
 html, body
   margin 0
   padding 0
+a
+  text-decoration none
+a:hover
+  text-decoration underline $accentColor
+
 .App
   font-family 'Avenir', Helvetica, Arial, sans-serif
   display grid
@@ -14,14 +32,19 @@ html, body
   height 100vh
   text-align center
 
-
-
 button
-  background-color #fff
+  background-color $darkPrimaryColor
+  color white
+  padding 1rem
+  border none
+  border-radius 10px
 
 button:hover
+  background-color darken($darkPrimaryColor, 20%)
   cursor pointer
 
+button:active
+  background-color $darkPrimaryColor
 
   /**
   -webkit-font-smoothing antialiased
@@ -68,21 +91,7 @@ button:hover
 
 .machine__button
   font-size 2rem
-  padding 1rem
-  border-radius 2px
-  box-shadow 0 1px 2px #555
-  border 2px solid #666
 
-button
-  border 0
-
-.machine__button:hover
-  background-color #eee
-
-  
-
-.machine__button:active
-  background-color #fee
 // agent.styl
 
 .agent
@@ -105,26 +114,17 @@ label
 
 .agent__button
   font-size 2rem
-  padding 1rem
-  border-radius 2px
-  border 2px solid #666
-  box-shadow 0 1px 2px #555
   grid-column span 2
-
-.agent__button:hover
-  background-color #eee
-
-.agent__button:active
-  background-color #fee
 
 // navbar
 .navbar
   width 100%
-  background-color #667266
+  background-color $primaryColor
   display flex
   padding 1rem 0
   font-family sans-serif
   color white
+  box-shadow 0 3px 2px $accentColor
 .navbar__items
   display flex
   
@@ -132,16 +132,19 @@ label
   margin-left auto
   padding-right 1rem
 .navbar__link
+  font-family Rubik
+  font-size 1.25rem
   padding-right .5rem
   color white
+  align-self center
 .navbar__link-toggle
   display none
 .navbar__link--active
   font-weight 800
-  color #ccc
+  color $accentColor
 .navbar__link-brand
   padding-left 1rem
-  font-size 1.25rem
+  font-size 1.75rem
 
 .navbar__toggle-button::after
   content ""
@@ -165,7 +168,7 @@ label
     padding .25rem 0
   .navbar__link-toggle
     align-self flex-end
-    padding .5rem 2rem
+    padding 1.25rem 2rem
     display initial
     position absolute
     cursor pointer
