Style board title

--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -64,6 +64,14 @@ button:active
 .board
   margin 0
   padding 0
+  height 100%
+  display grid
+  grid-template-rows auto 1fr
+  
+
+.board__title
+  font-size 10vw
+
 .board__active-number
   color: #232323
   font-size 33vw
