--- a/src/static/stylus/style.styl
+++ b/src/static/stylus/style.styl
@@ -1,19 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Exo+2');
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 
-$brandColor = #667266
-$blue = #007BFF
+@import 'variables'
+@import 'navigation'
+@import 'agent'
+@import 'machine'
+@import 'board'
 
-$darkPrimaryColor =   #00796B
-$primaryColor =       #009688
-$lightPrimaryColor =  #B2DFDB
-$textPrimaryColor =   #FFFFFF
-$accentColor =        #FFC107
-$primaryTextColor =   #212121
-$secondaryTextColor = #757575
-$dividerColor =       #BDBDBD
-
-// leave in this file 
 html, body
   margin 0
   padding 0
@@ -21,16 +14,6 @@ a
   text-decoration none
 a:hover
   text-decoration underline $accentColor
-
-.App
-  font-family 'Avenir', Helvetica, Arial, sans-serif
-  display grid
-  grid-template-rows auto 1fr
-  grid-template-columns 1fr
-  align-items center
-  justify-items center
-  height 100vh
-  text-align center
 
 button
   background-color $darkPrimaryColor
@@ -46,156 +29,20 @@ button:hover
 button:active
   background-color $darkPrimaryColor
 
+.App
+  font-family 'Avenir', Helvetica, Arial, sans-serif
+  display grid
+  grid-template-rows auto 1fr
+  grid-template-columns 1fr
+  align-items center
+  justify-items center
+  height 100vh
+  text-align center
+
+
   /**
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   color #2c3e50
   grid-template-rows auto 1fr
   **/
-
-// navigation.style
-
-.navigation > *
-  padding 10px
-
-
-// board.style
-
-.board
-  margin 0
-  padding 0
-  height 100%
-  display grid
-  grid-template-rows auto 1fr
-  
-
-.board__title
-  font-size 10vw
-
-.board__active-number
-  color: #232323
-  font-size 33vw
-  margin 0
-  padding 0
-  width 100%
-  text-align center
-  border 0
-  font-family Exo 2
-
-  // machine.style
-.machine
-  display grid
-  grid-gap 3rem
-  font-size 2rem
-.machine__number
-  background url("https://res.cloudinary.com/maccorzo/image/upload/v1539974724/qns/number.svg") no-repeat center center
-  height 210px
-  min-width 250px
-  text-align center
-  font-size 4rem
-  display flex
-  align-items center
-  justify-content center
-
-.machine__button
-  font-size 2rem
-
-// agent.styl
-
-.agent
-  padding 0
-  margin 0
-  font-size 3rem
-  display grid
-  grid-template-columns: auto 1fr
-  grid-gap 1rem
-  justify-items end
-  
-label
-  justify-self left
-
-.agent__input
-  font-size 3rem
-  width 9rem
-  text-align right
-  border 0
-
-.agent__button
-  font-size 2rem
-  grid-column span 2
-
-// navbar
-.navbar
-  width 100%
-  background-color $primaryColor
-  display flex
-  padding 1rem 0
-  font-family sans-serif
-  color white
-  box-shadow 0 3px 2px $accentColor
-.navbar__items
-  display flex
-  
-.navbar__items--right
-  margin-left auto
-  padding-right 1rem
-.navbar__link
-  font-family Rubik
-  font-size 1.25rem
-  padding-right .5rem
-  color white
-  align-self center
-.navbar__link-toggle
-  display none
-.navbar__link--active
-  font-weight 800
-  color $accentColor
-.navbar__link-brand
-  padding-left 1rem
-  font-size 1.75rem
-
-.navbar__toggle-button::after
-  content ""
-  background-color white
-  height .25rem
-  width 2rem
-  position absolute
-  top 200%
-  width 100%
-  left 0
-
-
-@media only screen and (max-width 768px)
-  .navbar__items, .navbar
-    flex-direction column
-  .navbar__items
-    display none
-  .navbar__items--right
-    margin-left 0
-  .navbar__link
-    padding .25rem 0
-  .navbar__link-toggle
-    align-self flex-end
-    padding 1.25rem 2rem
-    display initial
-    position absolute
-    cursor pointer
-  .navbar__toggle--show
-    display flex
-  .navbar__toggle-button
-    background-color white
-    height .25rem
-    width 2rem
-    position absolute
-    top 45%
-    left 15%
-    transition all 1s ease
-  .navbar__toggle-button::before
-    content ""
-    background-color white
-    height .25rem
-    width 2rem
-    position absolute
-    bottom 200%
-    width 100%
-    left 0
