--- a/src/static/css/agent.css
+++ b/src/static/css/agent.css
@@ -1,1 +1,1 @@
-.agent{padding:0;margin:0;font-size:2rem;display:grid;grid-gap:3rem}.agent__info{text-align:center}label{justify-self:left}.agent__button{font-size:2rem}
+.agent{padding:0;margin:0;font-size:2rem;display:grid;grid-gap:3rem}.agent__info{display:grid}label{justify-self:left}.agent__button{font-size:2rem}
